# MuttonText

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.serena/: project.yml
scripts/: clean.sh  generate-apt-repo.sh  package.sh  (+4 more)
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: matching_bench.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: combo_commands.rs  data_commands.rs  engine_commands.rs  error.rs  group_commands.rs  mod.rs  picker_commands.rs  preferences_commands.rs  shortcut_commands.rs  tray_commands.rs
src-tauri/src/managers/: backup_manager.rs  bug_fixes.rs  clipboard_manager.rs  combo_manager.rs  combo_storage.rs  emoji_manager.rs  engine_manager.rs  expansion_pipeline.rs  export_manager.rs  file_watcher.rs  import_manager.rs  input_manager.rs  lifecycle_manager.rs  matching.rs  mod.rs  preferences_manager.rs  preferences_storage.rs  shortcut_manager.rs  storage.rs  substitution.rs  tray_manager.rs  update_manager.rs  variable_evaluator.rs
src-tauri/src/models/: combo.rs  group.rs  library.rs  matching.rs  mod.rs  preferences.rs
src-tauri/src/platform/: keyboard_hook.rs  linux.rs  macos.rs  mock.rs  mod.rs  rdev_common.rs
src-tauri/src/utils/: memory.rs  mod.rs
src-tauri/tests/: command_tests.rs  integration_m5_m6.rs  integration_m9_m10.rs  picker_flow_tests.rs  storage_tests.rs
src-tauri/tests/common/: mod.rs
(+109 files in other folders)
